--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ osx_image: xcode8.3
 before_install:
   brew tap vapor/tap;
   brew update;
-  brew install cmysql
+  brew install cmysql;
   brew install vapor;
 
 script:
