--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           name: Build and Run Tests
           no_output_timeout: 1800
           command: |
-            swift test -Xswiftc -DNOJSON
+            swift test
       - run:
           name: Restoring Package file
           command: mv res Package.swift
